MS-483 Added student registartion form
