# server/src/main/java/io/aiontechnology/mentorsuccess/api/controller/SchoolController.java
@@ -21,10 +21,8 @@ import io.aiontechnology.atlas.mapping.OneWayUpdateMapper;
 import io.aiontechnology.mentorsuccess.api.assembler.Assembler;
 import io.aiontechnology.mentorsuccess.api.error.NotFoundException;
 import io.aiontechnology.mentorsuccess.entity.School;
-import io.aiontechnology.mentorsuccess.model.inbound.InboundInvitation;
 import io.aiontechnology.mentorsuccess.model.inbound.InboundSchool;
 import io.aiontechnology.mentorsuccess.resource.SchoolResource;
-import io.aiontechnology.mentorsuccess.service.InvitationService;
 import io.aiontechnology.mentorsuccess.service.SchoolService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -64,12 +62,9 @@ public class SchoolController {
 
     // Mappers
     private final OneWayMapper<InboundSchool, School> schoolMapper;
-
     private final OneWayUpdateMapper<InboundSchool, School> schoolUpdateMapper;
 
     // Services
-    private final InvitationService invitationService;
-
     private final SchoolService schoolService;
 
     /**
@@ -135,15 +130,6 @@ public class SchoolController {
         return school
                 .flatMap(schoolAssembler::map)
                 .orElseThrow(() -> new NotFoundException("School was not found"));
-    }
-
-    @PostMapping("/{schoolId}/invitations")
-    @PreAuthorize("hasAuthority('school:update')")
-    public InboundInvitation studentInvitation(@PathVariable("schoolId") UUID schoolId,
-            @RequestBody @Valid InboundInvitation invitation) {
-        schoolService.getSchoolById(schoolId)
-                .ifPresent(school -> invitationService.invite(invitation, school));
-        return invitation;
     }
 
     /**
